--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* global.css */
 /* body {
-  font-family: Arial, Helvetica, sans-serif;
+  @apply text-gray-900;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+h1,
+h2,
+h3,
+p {
+  @apply text-gray-800;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    @apply text-white;
   }
+
+  h1,
+  h2,
+  h3,
+  p {
+    @apply text-gray-300;
+    /* Slightly dimmer text in dark mode */
+  /* }
 } */
